--- a/01.html
+++ b/01.html
@@ -6,16 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        div{
-            width: 200px;
-            height: 200px;
+        .box{
+            overflow: hidden;
+            /* width: 800px;
+            height: 200px; */
             background-color: #68b818;
+        }
+        .box1{
+            float: left;
+            width: 200px;
+            height: 50px;
+            background-color: rgb(175, 22, 106);
+        }
+        .box2{
+            float: left;
+            width: 200px;
+            height: 50px;
+            background-color: rgb(48, 51, 187);
+        }
+        .box3{
+            float: left;
+            width: 200px;
+            height: 50px;
+            background-color: rgb(150, 85, 24);
         }
     </style>
 </head>
 <body>
-    <div>
-             
+    <div class="box">
+        <span class="box1"></span>
+        <div class="box2"></div>
+        <a class="box3" href="#"></a>
     </div>
 </body>
 </html>
